--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,2 @@
-REACT_APP_CLOUDINARY_CLOUD_NAME = ddwo8iuhl
+REACT_APP_CLOUDINARY_CLOUD_NAME = dmjnq3caw
 REACT_APP_BACKEND_URL = https://youchat-af8c.onrender.com
-# REACT_APP_BACKEND_URL = http://localhost:8080
