--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLOUDINARY_CLOUD_NAME = dmjnq3caw
 REACT_APP_BACKEND_URL = https://youchat-af8c.onrender.com
+# REACT_APP_BACKEND_URL = https://youchat-ten.vercel.app
