--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-FRONTEND_URL = http://localhost:3000
+# FRONTEND_URL = http://localhost:3000
+FRONTEND_URL = https://youchatt.netlify.app
 MONGODB_URI = mongodb+srv://vanshvanshkumar39:YegksJ1AfwgaGuHB@cluster0.qqcjlz6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECREAT_KEY = 'ASKDGJSLDJGSLA;KDJIUOEWUTPIOUASKLDGJ;SLDKAJG'
