--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "https://chat-app-server-two-liart.vercel.app",
+  "proxy": "https://chat-app-server-two-liart.vercel.app",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.18.3",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
     "react": "^18.3.1",
