--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
-REACT_APP_CLOUDINARY_CLOUD_NAME = dmjnq3caw
-REACT_APP_BACKEND_URL = http://localhost:8080
+REACT_APP_CLOUDINARY_CLOUD_NAME = ''
+# REACT_APP_BACKEND_URL = http://localhost:8080
+REACT_APP_BACKEND_URL = ''
 # REACT_APP_BACKEND_URL = ''
