--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@ REACT_APP_CLOUDINARY_CLOUD_NAME = dmjnq3caw
 # REACT_APP_BACKEND_URL = http://localhost:8080
 # REACT_APP_BACKEND_URL = https://youchat-swart.vercel.app
 # REACT_APP_BACKEND_URL = https://youchat-af8c.onrender.com
-REACT_APP_BACKEND_URL = 
+REACT_APP_BACKEND_URL = https://youchat-snowy.vercel.app
