--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,19 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node"
+      "source": "/api/:path*",
+      "destination": "https://youchat-snowy.vercel.app/:path*"
     }
   ],
-  "routes": [
+  "headers": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://youchattt.netlify.app"
+        }
+      ]
     }
   ]
 }
